# debug

./: .ghci  debug.cabal
app/: DebugPP.hs  Instrument.hs
elm/src/: View.elm
src/Debug/: DebugTrace.hs  Hoed.hs  Variables.hs
test/: Hoed.hs  Main.hs  PP.hs  Util.hs
