cabal-version:      >= 1.18
build-type:         Simple
name:               debug
version:            0.1
license:            BSD3
license-file:       LICENSE
category:           Development, Debugging
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2017-2018
synopsis:           Simple trace-based debugger
description:
    An easy to use debugger for viewing function calls and intermediate variables.
    To use, annotate the function under test, run the code, and view the generated web page.
    Full usage instructions are at "Debug".
homepage:           https://github.com/ndmitchell/debug
bug-reports:        https://github.com/ndmitchell/debug/issues
tested-with:        GHC==8.4.1, GHC==8.2.2, GHC==8.0.2
extra-doc-files:
    CHANGES.txt
    README.md

data-files:
    html/debug.css
    html/debug.html
    html/debug.js

extra-source-files:
    test/ref/hoed.json
    test/ref/hoed80.json

source-repository head
    type:     git
    location: https://github.com/ndmitchell/debug.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends:
        Hoed >= 0.5.2,
        aeson,
        array,
        base == 4.*,
        bytestring,
        clock,
        containers,
        deepseq,
        directory,
        extra,
        ghc-prim,
        hashable,
        hashtables,
        libgraph >= 1.14,
        open-browser,
        prettyprinter,
        prettyprinter-compat-ansi-wl-pprint,
        template-haskell,
        text,
        transformers,
        uniplate,
        unordered-containers,
        vector

    exposed-modules:
        Debug
        Debug.Hoed
        Debug.DebugTrace
        Debug.Util
        Debug.Variables

    other-modules:
        Paths_debug

executable debug-pp
  main-is: DebugPP.hs
  ghc-options:         -main-is DebugPP
  other-modules:       
      Instrument
  hs-source-dirs:
      app
  build-depends:
      aeson
    , base >=4.7 && <5
    , directory
    , filepath
    , yaml
  default-language: Haskell2010

test-suite debug-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: app, test
    other-modules:
        Variables
        Util
        Hoed
        Instrument
        PP
    build-depends:
        base == 4.*,
        directory,
        extra,
        aeson,
        bytestring,
        containers,
        filepath,
        text,
        debug